--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,16 @@
     /* 16px */
     --size-7: calc(var(--size-6) + var(--size-6) / 3);
     /* 24px */
+
+}
+
+.glowing-text {
+    --text-color: #ff7f50;
+    /* Default text color */
+    --glow-color: rgba(255, 127, 80, 0.5);
+    /* Default glow color */
+    color: var(--text-color) !important;
+    text-shadow: 0 0 10px var(--glow-color), 0 0 15px var(--glow-color);
 }
 
 @media (max-width: 55em) {
@@ -47,7 +57,7 @@ body {
     background-color: #121316;
     color: #f3f3f5;
     font-family: Poppins;
-    width: 85%;
+    width: 90% !important;
     margin-left: calc(15% / 2);
 
     overflow-x: hidden;
@@ -90,12 +100,12 @@ section {
 }
 
 .landing .details h1 {
-    font-size: var(--size-5);
+    font-size: 32px;
     font-weight: 600;
     margin-bottom: 20px;
 }
 
-.landing .details span {
+.landing .details span:not(.button-text) {
     margin-bottom: 20px;
 }
 
@@ -350,7 +360,7 @@ section.downloads .download-container {
 
 /* Customize the badge's appearance */
 ms-store-badge::part(img) {
-    max-height: 52px;
+    max-height: 66px;
 }
 
 ms-store-badge {
@@ -383,5 +393,174 @@ a.margin {
 
     section.downloads .download-container {
         gap: 50px;
+    }
+}
+
+
+
+#tiers {
+    padding: 55px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 35px;
+}
+
+.tier-buttons {
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.tier-holder {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 60px;
+    justify-content: center;
+    align-items: center;
+}
+
+.colored {
+    --accent: #2657ea;
+    --hover-text: #f3f3f5 ;
+}
+.colored:hover {
+    color: var(--hover-text) !important;
+}
+
+@media (max-width: 55em) {
+
+    .tier-holder {
+        gap: 55px;
+    }
+
+    .tier-card{
+        width: 300px;
+    padding: 30px 60px;
+    height: 505px;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .tier-card {
+        background-color: #ffffff  !important; 
+    }
+  }
+.tier-card {
+    --color: #ff558eca;
+    /* Set the variable for background and border color */
+    background-color: #1b1d213f;
+    border: 4px solid var(--color);
+    border-radius: 40px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    width: 40vh;
+    padding: 30px 5vh;
+    min-height: 505px;
+    /* Set the height for all cards to 300px (adjust as needed) */
+    /* margin: 0 auto; */
+    display: flex;
+    flex-direction: column;
+    transition: all .1s ease;
+
+
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0px 0px 15px 0px var(--color);
+}
+
+.tier-card:hover {
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0px 0px 32px 0px var(--color);
+
+}
+
+/* Style the tier title holder */
+.tier-title-holder {
+    /* Set the height for the title holder div (adjust as needed) */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* Style the tier title */
+.tier-title {
+    font-size: 44px;
+    margin: 15px 0px -4px 0px;
+}
+
+/* Style the tier image */
+.tier-img {
+    width: 115%;
+    /* Set the height for the tier image (adjust as needed) */
+    border-radius: 15px;
+}
+
+/* Style the tier features list */
+.tier-features {
+    padding: 0;
+    flex-grow: 1;
+    /* Allow the features list to grow and take remaining space */
+}
+
+/* Style the tier features list items */
+.tier-features li {
+    margin-bottom: 5px;
+    color: var(--fg);
+}
+
+
+
+
+
+
+
+.icon-button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+    justify-content: center;
+}
+
+.icon-button span {
+
+    text-align: center;
+    text-wrap: nowrap;
+}
+
+.icon-button svg {
+    --w: 35px;
+    width: var(--w);
+    height: var(--w);
+    fill: aliceblue;
+    margin-right: 15px;
+}
+
+.icon-button.filled {
+    fill: aliceblue;
+}
+
+.icon-button.filled svg {
+    fill: aliceblue;
+}
+
+.icon-button.filled svg g {
+    fill: aliceblue;
+}
+
+.icon-button.stroked {
+    stroke: aliceblue;
+}
+
+.icon-button.stroked svg {
+    stroke: aliceblue;
+}
+
+.icon-button.stroked svg g {
+    stroke: aliceblue;
+}
+@media  (max-width: 1300px) {
+    .icon-button{
+        width: auto;
     }
 }
