--- a/styles/main.css
+++ b/styles/main.css
@@ -58,7 +58,7 @@ body {
     color: #f3f3f5;
     font-family: Poppins;
     width: 90% !important;
-    margin-left: calc(15% / 2);
+    margin-left: calc(10% / 2) !important;
 
     overflow-x: hidden;
 }
@@ -279,25 +279,52 @@ section {
     padding: 0;
     gap: 0px;
 }
+.developedby{
+    color: var(--accent-lighter) !important;
+}
+.developedby:hover{
+    color: #cbcfee !important;
+}
 
 .slider {
     width: 750px;
     overflow: hidden;
+    
     border-radius: 3px;
     filter: drop-shadow(3px 10px 15px 0px rgba(0, 0, 0, 0.4));
+    /* animation: pulse 5s linear infinite; */
+}
+@media (max-width: 55em){
+.primary-header[data-visible="true"] {
+    height: 40rem !important;
+}}
+.slider.loaded {
+    animation-play-state: paused; /* Pauses the animation */
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 0.6; /* Lower opacity at the start of animation */
+    }
+    50% {
+        opacity: 1; /* Higher opacity in the middle of the animation */
+    }
+    100% {
+        opacity: 0.6; /* Lower opacity at the end of animation */
+    }
 }
 
 @media (max-width: 1400px) {
 
     .slider {
-        width: 90vw !important;
+        width: 80vw !important;
         overflow: hidden;
         border-radius: 3px;
         filter: drop-shadow(3px 10px 15px 0px rgba(0, 0, 0, 0.4));
     }
 
     .slider-image {
-        width: 90vw !important;
+        width: 80vw !important;
         /* height: 250px; */
         aspect-ratio: auto;
         border-radius: 15px;
@@ -432,6 +459,7 @@ a.margin {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5rem;
 }
 
 .tier-holder {
@@ -439,6 +467,7 @@ a.margin {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 60px;
+    margin: 0px 5px;
     justify-content: center;
     align-items: center;
 }
@@ -455,6 +484,7 @@ a.margin {
 
     .tier-holder {
         gap: 55px;
+        margin: 0px ;
     }
 
     .tier-card{
@@ -468,32 +498,66 @@ a.margin {
     .tier-card {
         background-color: #ffffff  !important; 
     }
+    .developedby:hover{
+        color: var(--accent) !important;
+    }
+    
   }
 .tier-card {
     --color: #ff558eca;
+    --darker-color: #1b1d213f;
+
+    
+    --normal-color: #1b1d213f;
+    --normal-darker-color: #1b1d213f;
+    --hover-text-color: var(--fg);
     /* Set the variable for background and border color */
-    background-color: #1b1d213f;
-    border: 4px solid var(--color);
+    background: #1b1d213f;  
+    
+    background-image: linear-gradient(
+      45deg,
+      var(--normal-color),
+      var(--normal-darker-color)
+    );
+    
+    /* border: 4px solid var(--color); */
     border-radius: 40px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    width: 40vh;
+    /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */ 
+    width: 370px;
     padding: 30px 5vh;
-    min-height: 505px;
+    height: 600px;
     /* Set the height for all cards to 300px (adjust as needed) */
     /* margin: 0 auto; */
     display: flex;
     flex-direction: column;
     transition: all .1s ease;
+    /* transition: background .3s ease !important; */
 
+    z-index: 1;
 
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0px 0px 15px 0px var(--color);
 }
 
-.tier-card:hover {
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0px 0px 32px 0px var(--color);
+@media (prefers-color-scheme: light) {
 
+    .tier-card {
+        --normal-color: #e9f1ff3f;
+        --normal-darker-color: #f1f6ff3f;
+    }
 }
-
+.tier-card:hover {
+    
+    background-image: linear-gradient(
+      45deg,
+      var(--color),
+      var(--darker-color)
+    );
+    
+    /* border: 5px ; */
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0px 0px 32px 0px var(--color), 0px 0px 35px 0px var(--color);
+    /* background: linear-gradient(45deg,var(--color), var(--darker-color)); */
+    --fg: var(--hover-text-color)
+} 
 /* Style the tier title holder */
 .tier-title-holder {
     /* Set the height for the title holder div (adjust as needed) */
@@ -506,6 +570,7 @@ a.margin {
 .tier-title {
     font-size: 44px;
     margin: 15px 0px -4px 0px;
+    color: var(--fg);
 }
 
 /* Style the tier image */
