--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,7 @@
     --error: #EA2E2E;
     --success: #7BDF49;
     --warning: #F3BA58;
+    --info: #589bf3;
 
     --size-1: 25px;
     --size-2: 60px;
