--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,7 @@
     /* 24px */
 
 }
+
 .glowing-text {
     --text-color: #ff7f50;
     /* Default text color */
@@ -282,38 +283,49 @@ section {
     padding: 0;
     gap: 0px;
 }
-.developedby{
+
+.developedby {
     color: var(--accent-lighter) !important;
 }
-.developedby:hover{
+
+.developedby:hover {
     color: #cbcfee !important;
 }
 
 .slider {
     width: 750px;
     overflow: hidden;
-    
+
     border-radius: 3px;
     filter: drop-shadow(3px 10px 15px 0px rgba(0, 0, 0, 0.4));
     /* animation: pulse 5s linear infinite; */
 }
-@media (max-width: 55em){
-.primary-header[data-visible="true"] {
-    height: 40rem !important;
-}}
+
+@media (max-width: 55em) {
+    .primary-header[data-visible="true"] {
+        height: 40rem !important;
+    }
+}
+
 .slider.loaded {
-    animation-play-state: paused; /* Pauses the animation */
+    animation-play-state: paused;
+    /* Pauses the animation */
 }
 
 @keyframes pulse {
     0% {
-        opacity: 0.6; /* Lower opacity at the start of animation */
+        opacity: 0.6;
+        /* Lower opacity at the start of animation */
     }
+
     50% {
-        opacity: 1; /* Higher opacity in the middle of the animation */
+        opacity: 1;
+        /* Higher opacity in the middle of the animation */
     }
+
     100% {
-        opacity: 0.6; /* Lower opacity at the end of animation */
+        opacity: 0.6;
+        /* Lower opacity at the end of animation */
     }
 }
 
@@ -341,25 +353,27 @@ section {
 
 }
 
-@media (max-width: 55em){
-body {
-    width: 100% !important;
-    margin-left: 0px!important;
+@media (max-width: 55em) {
+    body {
+        width: 100% !important;
+        margin-left: 0px !important;
+    }
+
+    .landing .details .text {
+
+        margin: 0px 2rem !important;
+    }
+
+    .landing .details .download-container {
+        justify-content: center !important;
+    }
+
+    .landing .details .download-container a {
+        width: 100% !important;
+    }
+
 }
-.landing .details .text{
-    
-    margin: 0px 2rem !important;
-}
-.landing .details .download-container {
-    justify-content: center !important;
-}
-.landing .details .download-container a {
-    width: 100% !important;
-}
-.tier-card{
-    width: 42vh !important;
-}
-}
+
 .recom-text {
     text-align: center;
 
@@ -479,130 +493,12 @@ a.margin {
 
 .colored {
     --accent: #2657ea;
-    --hover-text: #f3f3f5 ;
+    --hover-text: #f3f3f5;
 }
+
 .colored:hover {
     color: var(--hover-text) !important;
 }
-
-@media (max-width: 55em) {
-
-    .tier-holder {
-        gap: 55px;
-        margin: 0px ;
-    }
-
-    .tier-card{
-        width: 300px;
-    padding: 30px 60px;
-    height: 505px;
-    }
-}
-
-@media (prefers-color-scheme: light) {
-    .tier-card {
-        background-color: #ffffff  !important; 
-    }
-    .developedby:hover{
-        color: var(--accent) !important;
-    }
-    
-  }
-.tier-card {
-    --color: #ff558eca;
-    --darker-color: #1b1d213f;
-
-    
-    --normal-color: #1b1d213f;
-    --normal-darker-color: #1b1d213f;
-    --hover-text-color: var(--fg);
-    /* Set the variable for background and border color */
-    background: #1b1d213f;  
-    
-    background-image: linear-gradient(
-      45deg,
-      var(--normal-color),
-      var(--normal-darker-color)
-    );
-    
-    /* border: 4px solid var(--color); */
-    border-radius: 40px;
-    /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */ 
-    width: 370px;
-    padding: 30px 5vh;
-    height: 600px;
-    /* Set the height for all cards to 300px (adjust as needed) */
-    /* margin: 0 auto; */
-    display: flex;
-    flex-direction: column;
-    transition: all .1s ease;
-    /* transition: background .3s ease !important; */
-
-    z-index: 1;
-
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0px 0px 15px 0px var(--color);
-}
-
-@media (prefers-color-scheme: light) {
-
-    .tier-card {
-        --normal-color: #e9f1ff3f;
-        --normal-darker-color: #f1f6ff3f;
-    }
-}
-.tier-card:hover {
-    
-    background-image: linear-gradient(
-      45deg,
-      var(--color),
-      var(--darker-color)
-    );
-    
-    /* border: 5px ; */
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0px 0px 32px 0px var(--color), 0px 0px 35px 0px var(--color);
-    /* background: linear-gradient(45deg,var(--color), var(--darker-color)); */
-    --fg: var(--hover-text-color)
-} 
-/* Style the tier title holder */
-.tier-title-holder {
-    /* Set the height for the title holder div (adjust as needed) */
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-/* Style the tier title */
-.tier-title {
-    font-size: 44px;
-    margin: 15px 0px -4px 0px;
-    color: var(--fg);
-}
-
-/* Style the tier image */
-.tier-img {
-    width: 115%;
-    /* Set the height for the tier image (adjust as needed) */
-    border-radius: 15px;
-}
-
-/* Style the tier features list */
-.tier-features {
-    padding: 0;
-    flex-grow: 1;
-    /* Allow the features list to grow and take remaining space */
-}
-
-/* Style the tier features list items */
-.tier-features li {
-    margin-bottom: 5px;
-    color: var(--fg);
-}
-
-
-
-
-
-
 
 .icon-button {
     display: flex;
@@ -649,8 +545,139 @@ a.margin {
 .icon-button.stroked svg g {
     stroke: aliceblue;
 }
-@media  (max-width: 1300px) {
-    .icon-button{
+
+@media (max-width: 1300px) {
+    .icon-button {
         width: auto;
     }
+}
+
+
+
+
+@media (max-width: 55em) {
+
+    .tier-holder {
+        gap: 55px;
+        margin: 0px;
+    }
+
+}
+@media (prefers-color-scheme: light) {
+
+    .tier-card {
+        --normal-color: #e9f1ff3f;
+        --normal-darker-color: #f1f6ff3f;
+    }
+}
+.tier-card:hover {
+    background-color: var(--darker-color);
+    transition: background-color .16s ease-in-out ,
+     box-shadow .1s ease;
+     box-shadow: 0px 20px 20px 0px var(--color), -1px 2px 20px 0px var(--color);
+    /* background: linear-gradient(180deg, var(--hover-c1), #ff958900);
+    /* border: 5px; */
+    /* transform: translateY(-8);
+    box-shadow: 0 4px 7px 20px rgba(0, 0, 0, 0.1), 0px 8px 0px 0px var(--color); */
+    /*  */
+    /* background: linear-gradient(45deg, var(--color), var(--darker-color)); */
+    /* --fg: var(--hover-text-color);  */
+}
+@media (max-width: 55em) {
+    /* .tier-card {
+        width: 42vh !important;
+    } */
+    /* .tier-card {
+        width: 300px;
+        padding: 30px 60px;
+        height: 505px;
+    } */
+}
+
+@media (prefers-color-scheme: light) {
+    .tier-card {
+        /* background-color: #ffffff !important; */
+    }
+
+    .developedby:hover {
+        color: var(--accent) !important;
+    }
+
+}.tier-card {
+    width: 350px;
+    height: 560px;
+    background-color: #33343533;
+    --border-op: 20%;
+    border: 1px solid hsl(0deg 0% var(--border-op));    
+    padding: 15px 20px;
+    border-radius: 15px;
+}
+/* Style the tier title holder */
+.tier-title-holder {
+    /* Set the height for the title holder div (adjust as needed) */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.pro-holder{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+}
+
+
+/* Style the tier features list */
+.tier-features {
+    list-style: none;
+    /* padding: 0; */
+    /* flex-grow: 1; */
+    /* Allow the features list to grow and take remaining space */
+}
+
+/* Style the tier features list items */
+.tier-features li {
+    /* margin-bottom: 5px; */
+    color: var(--fg);
+    align-items: center;
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+}
+.tier-features.mark li:not(.x)::before {
+    /* margin-bottom: 5px; */
+    content: url(../mark.svg);
+    margin-right: 10px;
+}
+
+.tier-features.mark li.x::before {
+    /* margin-bottom: 5px; */
+    content: url(../x.svg);
+    margin-right: 10px;
+}
+
+/* Style the tier title */
+.tier-title {
+    font-size: 44px;
+    margin: 15px 0px -4px 0px;
+    color: var(--fg);
+}
+
+/* Style the tier image */
+.tier-img {
+    width: 100%;
+    /* Set the height for the tier image (adjust as needed) */
+    border-radius: 15px;
+}
+.text-green-500 {
+    --tw-text-opacity: 1;
+    color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+.text-red-500 {
+    --tw-text-opacity: 1;
+    color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-yellow-400 {
+    --tw-text-opacity: 1;
+    color: rgb(250 204 21 / var(--tw-text-opacity));
 }
